src/spec/ACSLParser.py
# Generated from ACSLParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class ACSLParser(Parser):

    grammarFileName = "ACSLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'\\abs'",
        "'\\at'",
        "'\\separated'",
        "'NULL'",
        "'ghost'",
        "'\\ghost'",
        "'reads'",
        "'logic'",
        "'?'",
        "'predicate'",
        "'lemma'",
        "'inductive'",
        "'case'",
        "'axiomatic'",
        "'axiom'",
        "'type'",
        "'void'",
        "'struct'",
        "'('",
        "')'",
        "'{'",
        "'}'",
        "','",
        "';'",
        "'['",
        "']'",
        "'.'",
        "'int'",
        "'float'",
        "'bool'",
        "'size_t'",
        "'unsigned'",
        "'int*'",
        "'char'",
        "'char*'",
        "'if'",
        "'else'",
        "'break'",
        "'continue'",
        "'return'",
        "'while'",
        "'do'",
        "'for'",
        "'='",
        "'=='",
        "'!='",
        "'<='",
        "'<'",
        "'>='",
        "'>'",
        "'+'",
        "'-'",
        "'*'",
        "'/'",
        "'!'",
        "'%'",
        "'&&'",
        "'||'",
        "'true'",
        "'false'",
        "'\\true'",
        "'\\false'",
        "'\\result'",
        "'\\length'",
        "'\\old'",
        "'\\with'",
        "'==>'",
        "'<==>'",
        "'^^'",
        "'\\forall'",
        "'\\exists'",
        "'boolean'",
        "'integer'",
        "'real'",
        "'requires'",
        "'decreases'",
        "'ensures'",
        "'assert'",
        "'loop'",
        "'invariant'",
        "'variant'",
        "'\\valid'",
        "'\\valid_read'",
        "'..'",
        "'check'",
        "'admit'",
        "'assigns'",
        "'terminates'",
        "'behavior'",
        "':'",
        "'assumes'",
        "'complete behaviors'",
        "'disjoint behaviors'",
        "'\\empty'",
        "'&'",
        "'\\union'",
        "'\\inter'",
        "'->'",
        "'\\subset'",
        "'\\in'",
        "'\\nothing'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'/*@'",
        "'*/'",
        "'//@'",
        "'@'",
    ]

    symbolicNames = [
        "<INVALID>",
        "ABS",
        "AT",
        "SEPARATED",
        "NULL",
        "GHOST",
        "GHOSTQualifier",
        "READS",
        "LOGIC",
        "QUESTIONMARK",
        "PREDICATE",
        "LEMMA",
        "INDUCTIVE",
        "CASE",
        "AXIOMATIC",
        "AXIOM",
        "TYPE",
        "VOID",
        "STRUCT",
        "LPAR",
        "RPAR",
        "LBRACE",
        "RBRACE",
        "COMMA",
        "SEMICOLON",
        "LBRACKET",
        "RBRACKET",
        "PERIOD",
        "INT",
        "FLOAT",
        "BOOL",
        "SIZET",
        "UNSIGNED",
        "INTPOINTER",
        "CHAR",
        "CHARPOINTER",
        "IF",
        "ELSE",
        "BREAK",
        "CONTINUE",
        "RETURN",
        "WHILE",
        "DO",
        "FOR",
        "ASSIGN",
        "EQ",
        "NE",
        "LE",
        "LT",
        "GE",
        "GT",
        "ADD",
        "MINUS",
        "MUL",
        "DIV",
        "NEG",
        "MOD",
        "AND",
        "OR",
        "EXPR_TRUE",
        "EXPR_FALSE",
        "ANNO_TRUE",
        "ANNO_FALSE",
        "RESULT",
        "LENGTH",
        "OLD",
        "WITH",
        "IMPLY",
        "EQUIV",
        "XOR",
        "FORALL",
        "EXISTS",
        "BOOLEAN",
        "INTEGER",
        "REAL",
        "REQUIRES",
        "DECREASES",
        "ENSURES",
        "ASSERT",
        "LOOP",
        "INVARIANT",
        "VARIANT",
        "VALID",
        "VALIDREAD",
        "APOSTROPHE",
        "CHECK",
        "ADMIT",
        "ASSIGNS",
        "TERMINATES",
        "BEHAVIOR",
        "COLON",
        "ASSUMES",
        "COMPLETE_BEHAVIOR",
        "DISJOINT_BEHAVIOR",
        "EMPTY_SET",
        "BIT_AND",
        "UNION",
        "INTER",
        "ARROW",
        "SUBSET",
        "IN",
        "NOTHING",
        "INT_CONSTANT",
        "FLOAT_CONSTANT",
        "IDENT",
        "CHAR_CONSTANT",
        "COMMENT",
        "LINE_COMMENT",
        "ANNOT_START",
        "ANNOT_END",
        "LINE_ANNOT_START",
        "ATE",
        "LINEEND",
        "WS",
    ]

    RULE_logicParaVar = 0
    RULE_logicAtomicType = 1
    RULE_logicConstant = 2
    RULE_term = 3
    RULE_pred = 4
    RULE_binder = 5
    RULE_funcContract = 6
    RULE_simpleClause = 7
    RULE_terminatesClause = 8
    RULE_assignsClause = 9
    RULE_locations = 10
    RULE_locationsList = 11
    RULE_location = 12
    RULE_requiresClause = 13
    RULE_decreasesClause = 14
    RULE_ensuresClause = 15
    RULE_namedBehavior = 16
    RULE_behaviorBody = 17
    RULE_assumesClause = 18
    RULE_completenessClause = 19
    RULE_tset = 20
    RULE_range = 21
    RULE_assertion = 22
    RULE_cStatement = 23
    RULE_loopAnnot = 24
    RULE_loopClause = 25
    RULE_clauseKind = 26
    RULE_loopInvariant = 27
    RULE_loopAssigns = 28
    RULE_loopBehavior = 29
    RULE_loopVariant = 30
    RULE_constant = 31
    RULE_cExternalDeclaration = 32
    RULE_logicDef = 33
    RULE_typeVar = 34
    RULE_typeExpr = 35
    RULE_polyId = 36
    RULE_logicConstDef = 37
    RULE_logicFunctionDef = 38
    RULE_logicPredicateDef = 39
    RULE_parameters = 40
    RULE_parameter = 41
    RULE_lemmaDef = 42
    RULE_inductiveDef = 43
    RULE_indcase = 44
    RULE_axiomaticDecl = 45
    RULE_logicDecl = 46
    RULE_logicTypeDecl = 47
    RULE_logicType = 48
    RULE_logicConstDecl = 49
    RULE_logicFunctionDecl = 50
    RULE_logicPredicateDecl = 51
    RULE_axiomDef = 52
    RULE_readsClause = 53
    RULE_id = 54
    RULE_labelBinders = 55
    RULE_labelId = 56
    RULE_ghostCode = 57
    RULE_acsl = 58

    ruleNames = [
        "logicParaVar",
        "logicAtomicType",
        "logicConstant",
        "term",
        "pred",
        "binder",
        "funcContract",
        "simpleClause",
        "terminatesClause",
        "assignsClause",
        "locations",
        "locationsList",
        "location",
        "requiresClause",
        "decreasesClause",
        "ensuresClause",
        "namedBehavior",
        "behaviorBody",
        "assumesClause",
        "completenessClause",
        "tset",
        "range",
        "assertion",
        "cStatement",
        "loopAnnot",
        "loopClause",
        "clauseKind",
        "loopInvariant",
        "loopAssigns",
        "loopBehavior",
        "loopVariant",
        "constant",
        "cExternalDeclaration",
        "logicDef",
        "typeVar",
        "typeExpr",
        "polyId",
        "logicConstDef",
        "logicFunctionDef",
        "logicPredicateDef",
        "parameters",
        "parameter",
        "lemmaDef",
        "inductiveDef",
        "indcase",
        "axiomaticDecl",
        "logicDecl",
        "logicTypeDecl",
        "logicType",
        "logicConstDecl",
        "logicFunctionDecl",
        "logicPredicateDecl",
        "axiomDef",
        "readsClause",
        "id",
        "labelBinders",
        "labelId",
        "ghostCode",
        "acsl",
    ]

    EOF = Token.EOF
    ABS = 1
    AT = 2
    SEPARATED = 3
    NULL = 4
    GHOST = 5
    GHOSTQualifier = 6
    READS = 7
    LOGIC = 8
    QUESTIONMARK = 9
    PREDICATE = 10
    LEMMA = 11
    INDUCTIVE = 12
    CASE = 13
    AXIOMATIC = 14
    AXIOM = 15
    TYPE = 16
    VOID = 17
    STRUCT = 18
    LPAR = 19
    RPAR = 20
    LBRACE = 21
    RBRACE = 22
    COMMA = 23
    SEMICOLON = 24
    LBRACKET = 25
    RBRACKET = 26
    PERIOD = 27
    INT = 28
    FLOAT = 29
    BOOL = 30
    SIZET = 31
    UNSIGNED = 32
    INTPOINTER = 33
    CHAR = 34
    CHARPOINTER = 35
    IF = 36
    ELSE = 37
    BREAK = 38
    CONTINUE = 39
    RETURN = 40
    WHILE = 41
    DO = 42
    FOR = 43
    ASSIGN = 44
    EQ = 45
    NE = 46
    LE = 47
    LT = 48
    GE = 49
    GT = 50
    ADD = 51
    MINUS = 52
    MUL = 53
    DIV = 54
    NEG = 55
    MOD = 56
    AND = 57
    OR = 58
    EXPR_TRUE = 59
    EXPR_FALSE = 60
    ANNO_TRUE = 61
    ANNO_FALSE = 62
    RESULT = 63
    LENGTH = 64
    OLD = 65
    WITH = 66
    IMPLY = 67
    EQUIV = 68
    XOR = 69
    FORALL = 70
    EXISTS = 71
    BOOLEAN = 72
    INTEGER = 73
    REAL = 74
    REQUIRES = 75
    DECREASES = 76
    ENSURES = 77
    ASSERT = 78
    LOOP = 79
    INVARIANT = 80
    VARIANT = 81
    VALID = 82
    VALIDREAD = 83
    APOSTROPHE = 84
    CHECK = 85
    ADMIT = 86
    ASSIGNS = 87
    TERMINATES = 88
    BEHAVIOR = 89
    COLON = 90
    ASSUMES = 91
    COMPLETE_BEHAVIOR = 92
    DISJOINT_BEHAVIOR = 93
    EMPTY_SET = 94
    BIT_AND = 95
    UNION = 96
    INTER = 97
    ARROW = 98
    SUBSET = 99
    IN = 100
    NOTHING = 101
    INT_CONSTANT = 102
    FLOAT_CONSTANT = 103
    IDENT = 104
    CHAR_CONSTANT = 105
    COMMENT = 106
    LINE_COMMENT = 107
    ANNOT_START = 108
    ANNOT_END = 109
    LINE_ANNOT_START = 110
    ATE = 111
    LINEEND = 112
    WS = 113

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class LogicParaVarContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicAtomicType(self):
            return self.getTypedRuleContext(ACSLParser.LogicAtomicTypeContext, 0)

        def IDENT(self, i: int = None):
            if i is None:
                return self.getTokens(ACSLParser.IDENT)
            else:
                return self.getToken(ACSLParser.IDENT, i)

        def STRUCT(self):
            return self.getToken(ACSLParser.STRUCT, 0)

        def LBRACKET(self):
            return self.getToken(ACSLParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(ACSLParser.RBRACKET, 0)

        def getRuleIndex(self):
            return ACSLParser.RULE_logicParaVar

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLogicParaVar"):
                listener.enterLogicParaVar(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLogicParaVar"):
                listener.exitLogicParaVar(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLogicParaVar"):
                return visitor.visitLogicParaVar(self)
            else:
                return visitor.visitChildren(self)

    def logicParaVar(self):

        localctx = ACSLParser.LogicParaVarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_logicParaVar)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 0, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.logicAtomicType()
                self.state = 119
                self.match(ACSLParser.IDENT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.match(ACSLParser.STRUCT)
                self.state = 122
                self.match(ACSLParser.IDENT)
                self.state = 123
                self.match(ACSLParser.IDENT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.logicAtomicType()
                self.state = 125
                self.match(ACSLParser.LBRACKET)
                self.state = 126
                self.match(ACSLParser.RBRACKET)
                self.state = 127
                self.match(ACSLParser.IDENT)
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LogicAtomicTypeContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(ACSLParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(ACSLParser.REAL, 0)

        def BOOLEAN(self):
            return self.getToken(ACSLParser.BOOLEAN, 0)

        def SIZET(self):
            return self.getToken(ACSLParser.SIZET, 0)

        def INT(self):
            return self.getToken(ACSLParser.INT, 0)

        def UNSIGNED(self):
            return self.getToken(ACSLParser.UNSIGNED, 0)

        def INTPOINTER(self):
            return self.getToken(ACSLParser.INTPOINTER, 0)

        def CHAR(self):
            return self.getToken(ACSLParser.CHAR, 0)

        def CHARPOINTER(self):
            return self.getToken(ACSLParser.CHARPOINTER, 0)

        def getRuleIndex(self):
            return ACSLParser.RULE_logicAtomicType

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLogicAtomicType"):
                listener.enterLogicAtomicType(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLogicAtomicType"):
                listener.exitLogicAtomicType(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLogicAtomicType"):
                return visitor.visitLogicAtomicType(self)
            else:
                return visitor.visitChildren(self)

    def logicAtomicType(self):

        localctx = ACSLParser.LogicAtomicTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_logicAtomicType)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            _la = self._input.LA(1)
            if not (
                (
                    (((_la - 28)) & ~0x3F) == 0
                    and ((1 << (_la - 28)) & 123145302311161) != 0
                )
            ):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LogicConstantContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_CONSTANT(self):
            return self.getToken(ACSLParser.INT_CONSTANT, 0)

        def FLOAT_CONSTANT(self):
            return self.getToken(ACSLParser.FLOAT_CONSTANT, 0)

        def ANNO_TRUE(self):
            return self.getToken(ACSLParser.ANNO_TRUE, 0)

        def ANNO_FALSE(self):
            return self.getToken(ACSLParser.ANNO_FALSE, 0)

        def CHAR_CONSTANT(self):
            return self.getToken(ACSLParser.CHAR_CONSTANT, 0)

        def getRuleIndex(self):
            return ACSLParser.RULE_logicConstant

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLogicConstant"):
                listener.enterLogicConstant(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLogicConstant"):
                listener.exitLogicConstant(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLogicConstant"):
                return visitor.visitLogicConstant(self)
            else:
                return visitor.visitChildren(self)

    def logicConstant(self):

        localctx = ACSLParser.LogicConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_logicConstant)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            _la = self._input.LA(1)
            if not (
                (
                    (((_la - 61)) & ~0x3F) == 0
                    and ((1 << (_la - 61)) & 24189255811075) != 0
                )
            ):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(ACSLParser.IDENT, 0)

        def RESULT(self):
            return self.getToken(ACSLParser.RESULT, 0)

        def OLD(self):
            return self.getToken(ACSLParser.OLD, 0)

        def LPAR(self):
            return self.getToken(ACSLParser.LPAR, 0)

        def term(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ACSLParser.TermContext)
            else:
                return self.getTypedRuleContext(ACSLParser.TermContext, i)

        def RPAR(self):
            return self.getToken(ACSLParser.RPAR, 0)

        def logicConstant(self):
            return self.getTypedRuleContext(ACSLParser.LogicConstantContext, 0)

        def LBRACE(self):
            return self.getToken(ACSLParser.LBRACE, 0)

        def WITH(self):
            return self.getToken(ACSLParser.WITH, 0)

        def LBRACKET(self):
            return self.getToken(ACSLParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(ACSLParser.RBRACKET, 0)

        def ASSIGN(self):
            return self.getToken(ACSLParser.ASSIGN, 0)

        def RBRACE(self):
            return self.getToken(ACSLParser.RBRACE, 0)

        def MINUS(self):
            return self.getToken(ACSLParser.MINUS, 0)

        def MUL(self):
            return self.getToken(ACSLParser.MUL, 0)

        def BIT_AND(self):
            return self.getToken(ACSLParser.BIT_AND, 0)

        def polyId(self):
            return self.getTypedRuleContext(ACSLParser.PolyIdContext, 0)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(ACSLParser.COMMA)
            else:
                return self.getToken(ACSLParser.COMMA, i)

        def ABS(self):
            return self.getToken(ACSLParser.ABS, 0)

        def AT(self):
            return self.getToken(ACSLParser.AT, 0)

        def tset(self):
            return self.getTypedRuleContext(ACSLParser.TsetContext, 0)

        def DIV(self):
            return self.getToken(ACSLParser.DIV, 0)

        def MOD(self):
            return self.getToken(ACSLParser.MOD, 0)

        def ADD(self):
            return self.getToken(ACSLParser.ADD, 0)

        def LT(self):
            return self.getToken(ACSLParser.LT, 0)

        def LE(self):
            return self.getToken(ACSLParser.LE, 0)

        def GT(self):
            return self.getToken(ACSLParser.GT, 0)

        def GE(self):
            return self.getToken(ACSLParser.GE, 0)

        def EQ(self):
            return self.getToken(ACSLParser.EQ, 0)

        def NE(self):
            return self.getToken(ACSLParser.NE, 0)

        def AND(self):
            return self.getToken(ACSLParser.AND, 0)

        def OR(self):
            return self.getToken(ACSLParser.OR, 0)

        def QUESTIONMARK(self):
            return self.getToken(ACSLParser.QUESTIONMARK, 0)

        def COLON(self):
            return self.getToken(ACSLParser.COLON, 0)

        def PERIOD(self):
            return self.getToken(ACSLParser.PERIOD, 0)

        def ARROW(self):
            return self.getToken(ACSLParser.ARROW, 0)

        def NULL(self):
            return self.getToken(ACSLParser.NULL, 0)

        def getRuleIndex(self):
            return ACSLParser.RULE_term

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTerm"):
                listener.enterTerm(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTerm"):
                listener.exitTerm(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitTerm"):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)

    def term(self, _p: int = 0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ACSLParser.TermContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_term, _p)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 206
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 3, self._ctx)
            if la_ == 1:
                self.state = 136
                self.match(ACSLParser.IDENT)
                pass

            elif la_ == 2:
                self.state = 137
                self.match(ACSLParser.RESULT)
                pass

            elif la_ == 3:
                self.state = 138
                self.match(ACSLParser.OLD)
                self.state = 139
                self.match(ACSLParser.LPAR)
                self.state = 140
                self.term(0)
                self.state = 141
                self.match(ACSLParser.RPAR)
                pass

            elif la_ == 4:
                self.state = 143
                self.logicConstant()
                pass

            elif la_ == 5:
                self.state = 144
                self.match(ACSLParser.LBRACE)
                self.state = 145
                self.term(0)
                self.state = 146
                self.match(ACSLParser.WITH)
                self.state = 147
                self.match(ACSLParser.LBRACKET)
                self.state = 148
                self.term(0)
                self.state = 149
                self.match(ACSLParser.RBRACKET)
                self.state = 150
                self.match(ACSLParser.ASSIGN)
                self.state = 151
                self.term(0)
                self.state = 152
                self.match(ACSLParser.RBRACE)
                pass

            elif la_ == 6:
                self.state = 154
                self.match(ACSLParser.LPAR)
                self.state = 155
                self.term(0)
                self.state = 156
                self.match(ACSLParser.RPAR)
                pass

            elif la_ == 7:
                self.state = 158
                self.match(ACSLParser.MINUS)
                self.state = 159
                self.term(17)
                pass

            elif la_ == 8:
                self.state = 160
                self.match(ACSLParser.MUL)
                self.state = 161
                self.term(14)
                pass

            elif la_ == 9:
                self.state = 162
                self.match(ACSLParser.BIT_AND)
                self.state = 163
                self.term(13)
                pass

            elif la_ == 10:
                self.state = 164
                self.polyId()
                self.state = 165
                self.match(ACSLParser.LPAR)
                self.state = 166
                self.term(0)
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == 23:
                    self.state = 167
                    self.match(ACSLParser.COMMA)
                    self.state = 168
                    self.term(0)
                    self.state = 173
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 174
                self.match(ACSLParser.RPAR)
                pass

            elif la_ == 11:
                self.state = 176
                self.match(ACSLParser.ABS)
                self.state = 177
                self.match(ACSLParser.LPAR)
                self.state = 178
                self.term(0)
                self.state = 179
                self.match(ACSLParser.RPAR)
                pass

            elif la_ == 12:
                self.state = 181
                self.match(ACSLParser.AT)
                self.state = 182
                self.match(ACSLParser.LPAR)
                self.state = 183
                self.term(0)
                self.state = 184
                self.match(ACSLParser.COMMA)
                self.state = 185
                self.match(ACSLParser.IDENT)
                self.state = 186
                self.match(ACSLParser.RPAR)
                pass

            elif la_ == 13:
                self.state = 188
                self.match(ACSLParser.AT)
                self.state = 189
                self.match(ACSLParser.LPAR)
                self.state = 190
                self.tset(0)
                self.state = 191
                self.match(ACSLParser.COMMA)
                self.state = 192
                self.match(ACSLParser.IDENT)
                self.state = 193
                self.match(ACSLParser.RPAR)
                pass

            elif la_ == 14:
                self.state = 195
                self.match(ACSLParser.LBRACE)
                self.state = 196
                self.term(0)
                self.state = 201
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == 23:
                    self.state = 197
                    self.match(ACSLParser.COMMA)
                    self.state = 198
                    self.term(0)
                    self.state = 203
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 204
                self.match(ACSLParser.RBRACE)
                pass

            self._ctx.stop = self._input.LT(-1)
            self.state = 251
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 5, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 249
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 4, self._ctx)
                    if la_ == 1:
                        localctx = ACSLParser.TermContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_term
                        )
                        self.state = 208
                        if not self.precpred(self._ctx, 16):
                            from antlr4.error.Errors import FailedPredicateException
